--- a/client/style.css
+++ b/client/style.css
@@ -12,3 +12,92 @@ body {
     display: block;
     border-radius: 5px;
 }
+
+h6 {
+    color: white;
+    text-transform: uppercase;
+}
+
+.size-brush {
+    background-color: white;
+    padding: 0 10px;
+    border-radius: 5px;
+}
+
+#btns-group {
+    margin-top: 35px;
+    width: 300px;
+    display: flex;
+    justify-content: space-around;
+}
+
+#brush-set {
+    position: absolute;
+    /*left: 38%;*/
+    top: 100px;
+    width: 400px;
+    height: 370px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 5px;
+    padding: 10px;
+}
+
+#colors {
+    margin: 15px 0 30px 0;
+    width: 360px;
+    height: 50px;
+    background: white;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.color {
+    width: 45px;
+    height: 45px;
+    border-radius: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid black;
+}
+
+#red {
+    background: red;
+}
+
+#green {
+    background-color: green;
+}
+
+#blue {
+    background-color: blue;
+}
+
+#yellow {
+    background-color: yellow;
+}
+
+#magenta {
+    background-color: magenta;
+}
+
+#white {
+    background-color: white;
+}
+
+#black {
+    background-color: black;
+    color: white;
+}
+
+.hide {
+    visibility: hidden;
+}
+
+.show {
+    visibility: visible;
+}
