--- a/client/style.css
+++ b/client/style.css
@@ -10,7 +10,7 @@ body {
 #canvas {
     background-color: white;
     display: block;
-    border-radius: 5px;
+    border-radius: 3px;
 }
 
 h6 {
@@ -21,7 +21,14 @@ h6 {
 .size-brush {
     background-color: white;
     padding: 0 10px;
-    border-radius: 5px;
+    border-radius: 3px;
+}
+
+#username,
+#username2,
+#password,
+#password2 {
+    color: white;
 }
 
 #btns-group {
@@ -33,36 +40,52 @@ h6 {
 
 #brush-set {
     position: absolute;
-    /*left: 38%;*/
     top: 100px;
     width: 400px;
     height: 370px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    border-radius: 5px;
+    border-radius: 3px;
     padding: 10px;
+}
+
+#reg-auth {
+    position: absolute;
+    top: 100px;
+    width: 400px;
+    height: 370px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 3px;
+    padding: 10px;
+}
+
+.painting-user {
+    position: absolute;
+    top: 70px;
 }
 
 #colors {
     margin: 15px 0 30px 0;
-    width: 360px;
-    height: 50px;
+    width: 380px;
+    height: 55px;
     background: white;
-    border-radius: 5px;
+    border-radius: 3px;
     display: flex;
     align-items: center;
     justify-content: space-around;
 }
 
 .color {
-    width: 45px;
-    height: 45px;
-    border-radius: 5px;
+    width: 42px;
+    height: 42px;
+    border-radius: 3px;
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 1px solid black;
+    border: 1px solid white;
 }
 
 #red {
