added valid for reg/auth

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -21,7 +21,7 @@
         {{else}}
             <li><a class="reg-auth-btn" href="#">Reg / Auth</a></li>
         {{/if}}
-        <li><a href="#">{{username}}</a></li>
+        <li><a class="user-name-nav" href="#">{{username}}</a></li>
     </ul>
 </div>
 <div id="cont">
